--- a/CoreFramework/test-output/index.html
+++ b/CoreFramework/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Stock_Suite">
-                    <span>C:\SELENIUM\CoreFramework\src\test\resources\stocksuite.xml</span>
+                    <span>C:\JAVA-SELENIUM\localgitrep\CoreFramework\src\test\resources\stocksuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -143,7 +143,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Portfolio_Suite">
-                    <span>C:\SELENIUM\CoreFramework\src\test\resources\portfoliosuite.xml</span>
+                    <span>C:\JAVA-SELENIUM\localgitrep\CoreFramework\src\test\resources\portfoliosuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -196,12 +196,12 @@
                     <div class="method-list-content skipped suite-Portfolio_Suite">
                       <span>
                         <img width="3%" src="skipped.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Portfolio_Suite" title="com.selenium.testcases.portfoliosuite.PortFolioTest" hash-for-method="createPortFolioTest({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome})">createPortFolioTest({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome})</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Portfolio_Suite" title="com.selenium.testcases.portfoliosuite.PortFolioTest" hash-for-method="createPortFolioTest({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla})">createPortFolioTest({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="skipped.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Portfolio_Suite" title="com.selenium.testcases.portfoliosuite.PortFolioTest" hash-for-method="createPortFolioTest({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla})">createPortFolioTest({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla})</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Portfolio_Suite" title="com.selenium.testcases.portfoliosuite.PortFolioTest" hash-for-method="createPortFolioTest({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome})">createPortFolioTest({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -325,10 +325,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createPortFolioTest({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome})">
-                  </a> <!-- createPortFolioTest({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome}) -->
+                  <a name="createPortFolioTest({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla})">
+                  </a> <!-- createPortFolioTest({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla}) -->
                   <span class="method-name">createPortFolioTest</span>
-                  <span class="parameters">({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome})</span>
+                  <span class="parameters">({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla})</span>
                   <div class="stack-trace">org.testng.SkipException: Runmode is set to NO
 	at com.selenium.testcases.portfoliosuite.PortFolioTest.createPortFolioTest(PortFolioTest.java:22)
 	at java.util.concurrent.FutureTask.run(Unknown Source)
@@ -341,10 +341,10 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="createPortFolioTest({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla})">
-                  </a> <!-- createPortFolioTest({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla}) -->
+                  <a name="createPortFolioTest({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome})">
+                  </a> <!-- createPortFolioTest({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome}) -->
                   <span class="method-name">createPortFolioTest</span>
-                  <span class="parameters">({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla})</span>
+                  <span class="parameters">({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome})</span>
                   <div class="stack-trace">org.testng.SkipException: Runmode is set to NO
 	at com.selenium.testcases.portfoliosuite.PortFolioTest.createPortFolioTest(PortFolioTest.java:22)
 	at java.util.concurrent.FutureTask.run(Unknown Source)
@@ -390,7 +390,7 @@
         </div> <!-- panel Portfolio_Suite -->
         <div panel-name="test-xml-Stock_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\SELENIUM\CoreFramework\src\test\resources\stocksuite.xml</span>
+            <span class="header-content">C:\JAVA-SELENIUM\localgitrep\CoreFramework\src\test\resources\stocksuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -413,7 +413,7 @@
         </div> <!-- panel -->
         <div panel-name="test-xml-My_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\SELENIUM\CoreFramework\src\test\resources\testng.xml</span>
+            <span class="header-content">C:\JAVA-SELENIUM\localgitrep\CoreFramework\src\test\resources\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -430,7 +430,7 @@
         </div> <!-- panel -->
         <div panel-name="test-xml-Portfolio_Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\SELENIUM\CoreFramework\src\test\resources\portfoliosuite.xml</span>
+            <span class="header-content">C:\JAVA-SELENIUM\localgitrep\CoreFramework\src\test\resources\portfoliosuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -527,17 +527,17 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'buyOrSellStockTest')
-data.setCell(0, 2, 'com.selenium.testcases.stocksuite.BuySellStockTest')
-data.setCell(0, 3, 13);
+data.setCell(0, 1, 'addStockTest')
+data.setCell(0, 2, 'com.selenium.testcases.stocksuite.AddDelStockTest')
+data.setCell(0, 3, 50);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'deleteStockTest')
 data.setCell(1, 2, 'com.selenium.testcases.stocksuite.AddDelStockTest')
-data.setCell(1, 3, 12);
+data.setCell(1, 3, 43);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'addStockTest')
-data.setCell(2, 2, 'com.selenium.testcases.stocksuite.AddDelStockTest')
-data.setCell(2, 3, 3);
+data.setCell(2, 1, 'buyOrSellStockTest')
+data.setCell(2, 2, 'com.selenium.testcases.stocksuite.BuySellStockTest')
+data.setCell(2, 3, 9);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'checkTransactionHistoryTest')
 data.setCell(3, 2, 'com.selenium.testcases.stocksuite.BuySellStockTest')
@@ -546,7 +546,7 @@ window.suiteTableData['Stock_Suite']= { tableData: data, tableDiv: 'times-div-St
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 ms</span>
+              <span class="suite-total-time">Total running time: 102 ms</span>
               <div id="times-div-Stock_Suite">
               </div> <!-- times-div-Stock_Suite -->
             </div> <!-- times-div -->
@@ -594,15 +594,15 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'loginTest')
 data.setCell(0, 2, 'com.selenium.testcases.portfoliosuite.LoginTest')
-data.setCell(0, 3, 85999);
+data.setCell(0, 3, 144159);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'createPortFolioTest')
 data.setCell(1, 2, 'com.selenium.testcases.portfoliosuite.PortFolioTest')
-data.setCell(1, 3, 26);
+data.setCell(1, 3, 130);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'createPortFolioTest')
 data.setCell(2, 2, 'com.selenium.testcases.portfoliosuite.PortFolioTest')
-data.setCell(2, 3, 8);
+data.setCell(2, 3, 48);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'deletePortFolioTest')
 data.setCell(3, 2, 'com.selenium.testcases.portfoliosuite.PortFolioTest')
@@ -611,7 +611,7 @@ window.suiteTableData['Portfolio_Suite']= { tableData: data, tableDiv: 'times-di
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Portfolio_Suite">
               </div> <!-- times-div-Portfolio_Suite -->
             </div> <!-- times-div -->
@@ -675,55 +675,49 @@ return data;
               <div class="chronological-class-name">com.selenium.testcases.stocksuite.AddDelStockTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">init</span>
-                <span class="method-start">15 ms</span>
+                <span class="method-start">68 ms</span>
               </div> <!-- configuration-test before -->
-              <div class="configuration-method before">
-                <span class="method-name">initTest</span>
-                <span class="method-start">160 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">addStockTest({Date=5/03/2018, PurchasePrice=200, PortfolioName=ashish, Runmode=Y, Stock Name=Tata Steel Ltd, Quan...)</span>
-                <span class="method-start">160 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">quit</span>
-                <span class="method-start">164 ms</span>
-              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.selenium.testcases.stocksuite.BuySellStockTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">237 ms</span>
+                <span class="method-start">778 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">buyOrSellStockTest({Date=5/03/2018, Action=Sell, PurchasePrice=200, PortfolioName=ashish, Runmode=Y, Stock Name=Relianc...)</span>
-                <span class="method-start">348 ms</span>
+                <span class="method-start">779 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">quit</span>
+                <span class="method-start">792 ms</span>
+              </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.selenium.testcases.stocksuite.AddDelStockTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">349 ms</span>
+                <span class="method-start">834 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">addStockTest({Date=5/03/2018, PurchasePrice=200, PortfolioName=ashish, Runmode=Y, Stock Name=Tata Steel Ltd, Quan...)</span>
+                <span class="method-start">1355 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">quit</span>
+                <span class="method-start">1410 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">initTest</span>
+                <span class="method-start">2163 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">deleteStockTest({PortfolioName=ashish, Runmode=Y, Stock Name=Tata Steel Ltd., Browser=Chrome})</span>
-                <span class="method-start">350 ms</span>
+                <span class="method-start">2164 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.selenium.testcases.stocksuite.BuySellStockTest</div> <!-- chronological-class-name -->
               <div class="configuration-method after">
                 <span class="method-name">quit</span>
-                <span class="method-start">381 ms</span>
-              </div> <!-- configuration-method after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.selenium.testcases.stocksuite.AddDelStockTest</div> <!-- chronological-class-name -->
-              <div class="configuration-method after">
-                <span class="method-name">quit</span>
-                <span class="method-start">402 ms</span>
+                <span class="method-start">2218 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
@@ -750,58 +744,58 @@ return data;
               <div class="chronological-class-name">com.selenium.testcases.portfoliosuite.PortFolioTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">init</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-start">16 ms</span>
               </div> <!-- configuration-test before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.selenium.testcases.portfoliosuite.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">1902 ms</span>
+                <span class="method-start">4582 ms</span>
               </div> <!-- configuration-method before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.selenium.testcases.portfoliosuite.PortFolioTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">1902 ms</span>
+                <span class="method-start">4628 ms</span>
               </div> <!-- configuration-method before -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.selenium.testcases.portfoliosuite.LoginTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=Y, Browser...)</span>
-                <span class="method-start">2420 ms</span>
+                <span class="method-start">6395 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.selenium.testcases.portfoliosuite.PortFolioTest</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">createPortFolioTest({PortfolioName=SamplePort1311, Runmode=Y, Browser=Chrome})</span>
-                <span class="method-start">2420 ms</span>
+                <span class="method-start">6395 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quit</span>
-                <span class="method-start">2451 ms</span>
+                <span class="method-start">6533 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">3210 ms</span>
+                <span class="method-start">9838 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createPortFolioTest({PortfolioName=SamplePort1411, Runmode=Y, Browser=Mozilla})</span>
-                <span class="method-start">3210 ms</span>
+                <span class="method-start">9839 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quit</span>
-                <span class="method-start">3220 ms</span>
+                <span class="method-start">9894 ms</span>
               </div> <!-- configuration-method after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.selenium.testcases.portfoliosuite.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method after">
                 <span class="method-name">quit</span>
-                <span class="method-start">88421 ms</span>
+                <span class="method-start">150562 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
