--- a/CoreFramework/test-output/index.html
+++ b/CoreFramework/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Default_suite">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-skipped">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Manish\AppData\Local\Temp\testng-eclipse-821560876\testng-customsuite.xml</span>
+                    <span>C:\Users\Manish\AppData\Local\Temp\testng-eclipse-1550423682\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,21 +91,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                    <span class="method-stats">2 methods,  1 skipped,  1 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods skipped suite-Default_suite"> (hide)</a> <!-- hide-methods skipped suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods skipped suite-Default_suite"> (show)</a> <!-- show-methods skipped suite-Default_suite -->
                     </span>
-                    <div class="method-list-content failed suite-Default_suite">
+                    <div class="method-list-content skipped suite-Default_suite">
                       <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.selenium.testcases.portfoliosuite.PortFolioTest" hash-for-method="deletePortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})">deletePortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})</a> <!-- method navigator-link -->
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.selenium.testcases.portfoliosuite.LoginTest" hash-for-method="loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=N, Browser...)">loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=N, Browser...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                    </div> <!-- method-list-content skipped suite-Default_suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -116,7 +116,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.selenium.testcases.portfoliosuite.PortFolioTest" hash-for-method="createPortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})">createPortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.selenium.testcases.portfoliosuite.LoginTest" hash-for-method="loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=Y, Browser...)">loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=Y, Browser...)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -131,25 +131,20 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
+          <div class="suite-Default_suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">com.selenium.testcases.portfoliosuite.PortFolioTest</span>
+              <img src="skipped.png"/>
+              <span class="class-name">com.selenium.testcases.portfoliosuite.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="deletePortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})">
-                  </a> <!-- deletePortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome}) -->
-                  <span class="method-name">deletePortFolioTest</span>
-                  <span class="parameters">({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})</span>
-                  <div class="stack-trace">java.lang.reflect.InvocationTargetException
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
-	at java.lang.reflect.Method.invoke(Unknown Source)
-	at com.selenium.driver.DriverScript.executeKeywords(DriverScript.java:48)
-	at com.selenium.testcases.portfoliosuite.PortFolioTest.deletePortFolioTest(PortFolioTest.java:34)
+                  <a name="loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=N, Browser...)">
+                  </a> <!-- loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=N, Browser...) -->
+                  <span class="method-name">loginTest</span>
+                  <span class="parameters">({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=N, Browser=Mozilla})</span>
+                  <div class="stack-trace">org.testng.SkipException: Runmode is set to NO
+	at com.selenium.testcases.portfoliosuite.LoginTest.loginTest(LoginTest.java:22)
 	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
 	at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
 	at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
@@ -175,31 +170,24 @@
 	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:114)
 	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
 	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-Caused by: java.lang.AssertionError: The following asserts failed:
-	Could not delete the option
-	at org.testng.asserts.SoftAssert.assertAll(SoftAssert.java:43)
-	at com.selenium.keywords.GenericKeywords.assertAll(GenericKeywords.java:384)
-	at com.selenium.keywords.GenericKeywords.reportFailure(GenericKeywords.java:379)
-	at com.selenium.keywords.GenericKeywords.validateElementNotInList(GenericKeywords.java:249)
-	... 31 more
 
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
+          </div> <!-- suite-Default_suite-class-skipped -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.selenium.testcases.portfoliosuite.PortFolioTest</span>
+              <span class="class-name">com.selenium.testcases.portfoliosuite.LoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createPortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})">
-                  </a> <!-- createPortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome}) -->
-                  <span class="method-name">createPortFolioTest</span>
-                  <span class="parameters">({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})</span>
+                  <a name="loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=Y, Browser...)">
+                  </a> <!-- loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=Y, Browser...) -->
+                  <span class="method-name">loginTest</span>
+                  <span class="parameters">({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=Y, Browser=Chrome})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -207,7 +195,7 @@ Caused by: java.lang.AssertionError: The following asserts failed:
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Manish\AppData\Local\Temp\testng-eclipse-821560876\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Manish\AppData\Local\Temp\testng-eclipse-1550423682\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -216,7 +204,7 @@ Caused by: java.lang.AssertionError: The following asserts failed:
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.selenium.testcases.portfoliosuite.PortFolioTest&quot;/&gt;
+      &lt;class name=&quot;com.selenium.testcases.portfoliosuite.LoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -258,18 +246,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createPortFolioTest')
-data.setCell(0, 2, 'com.selenium.testcases.portfoliosuite.PortFolioTest')
-data.setCell(0, 3, 79012);
+data.setCell(0, 1, 'loginTest')
+data.setCell(0, 2, 'com.selenium.testcases.portfoliosuite.LoginTest')
+data.setCell(0, 3, 45643);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'deletePortFolioTest')
-data.setCell(1, 2, 'com.selenium.testcases.portfoliosuite.PortFolioTest')
-data.setCell(1, 3, 73835);
+data.setCell(1, 1, 'loginTest')
+data.setCell(1, 2, 'com.selenium.testcases.portfoliosuite.LoginTest')
+data.setCell(1, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 45 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -295,36 +283,34 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.selenium.testcases.portfoliosuite.PortFolioTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.selenium.testcases.portfoliosuite.LoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">init</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">731 ms</span>
+                <span class="method-start">670 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">createPortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})</span>
-                <span class="method-start">971 ms</span>
+                <span class="method-name">loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=Y, Browser...)</span>
+                <span class="method-start">863 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quit</span>
-                <span class="method-start">79985 ms</span>
+                <span class="method-start">46508 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">initTest</span>
-                <span class="method-start">81086 ms</span>
+                <span class="method-start">47505 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">deletePortFolioTest({PortfolioName=TestingPortfolio2, Runmode=Y, Browser=Chrome})</span>
-                <span class="method-start">81086 ms</span>
+                <span class="method-name">loginTest({Username=manish_chaudhari18, ExpectedResult=Loginsuccess, Password=ManishSarita, Runmode=N, Browser...)</span>
+                <span class="method-start">47505 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">quit</span>
-                <span class="method-start">154931 ms</span>
+                <span class="method-start">47505 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
