--- a/CoreFramework/test-output/old/Default suite/methods.html
+++ b/CoreFramework/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4c875">  <td>19/05/06 18:27:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@5e3a8624]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>19/05/06 18:27:03</td>   <td>718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@5e3a8624]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>19/05/06 18:27:03</td>   <td>960</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PortFolioTest.createPortFolioTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@5e3a8624]">createPortFolioTest</td> 
-  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>19/05/06 18:28:22</td>   <td>79973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@5e3a8624]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>19/05/06 18:28:23</td>   <td>81073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@5e3a8624]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="e9a889">  <td>19/05/06 18:28:23</td>   <td>81073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PortFolioTest.deletePortFolioTest(java.util.Hashtable)[pri:2, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@5e3a8624]">deletePortFolioTest</td> 
-  <td>main@1061804750</td>   <td></td> </tr>
-<tr bgcolor="c4c875">  <td>19/05/06 18:29:37</td>   <td>154918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@5e3a8624]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@1061804750</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/05/06 23:12:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@5e3a8624]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/05/06 23:12:31</td>   <td>660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@5e3a8624]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>19/05/06 23:12:31</td>   <td>853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@5e3a8624]">loginTest</td> 
+  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/05/06 23:13:17</td>   <td>46499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@5e3a8624]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/05/06 23:13:18</td>   <td>47495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@5e3a8624]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>19/05/06 23:13:18</td>   <td>47495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@5e3a8624]">loginTest</td> 
+  <td>main@832947102</td>   <td></td> </tr>
+<tr bgcolor="c4c875">  <td>19/05/06 23:13:18</td>   <td>47495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@5e3a8624]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@832947102</td>   <td></td> </tr>
 </table>
