--- a/CoreFramework/test-output/old/Stock Suite/toc.html
+++ b/CoreFramework/test-output/old/Stock Suite/toc.html
@@ -30,8 +30,8 @@
 
 <table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Portfolio Test (0/0/2)</td><td valign='top' align='right'>
-  <a href='Portfolio Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Buy Sell Stock Test (0/0/2)</td><td valign='top' align='right'>
+  <a href='Buy Sell Stock Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
