--- a/CoreFramework/test-output/old/Portfolio Suite/methods-alphabetical.html
+++ b/CoreFramework/test-output/old/Portfolio Suite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Portfolio Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbfa64">  <td>18/10/17 23:31:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PortFolioTest.createPortFolioTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@57fffcd7]">createPortFolioTest</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:28:16</td>   <td>-171390</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@685cb137]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:31:07</td>   <td>-108</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@57fffcd7]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:28:19</td>   <td>-168874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@685cb137]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:29:48</td>   <td>-79299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@685cb137]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:31:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@57fffcd7]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>18/10/17 23:28:20</td>   <td>-167751</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@685cb137]">loginTest</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="c87b81">  <td>18/10/17 23:29:48</td>   <td>-79299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@685cb137]">loginTest</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:29:47</td>   <td>-80612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@685cb137]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:31:06</td>   <td>-1358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@685cb137]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:32:13</td>   <td>65907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@57fffcd7]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="efa5e3">  <td>19/05/08 13:24:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PortFolioTest.createPortFolioTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@598067a5]">createPortFolioTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:04</td>   <td>-45386</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@7cd62f43]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>-85</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@598067a5]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:04</td>   <td>-44683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@7cd62f43]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>-215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@7cd62f43]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@598067a5]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="70999e">  <td>19/05/08 13:24:05</td>   <td>-44433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@7cd62f43]">loginTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="70999e">  <td>19/05/08 13:24:49</td>   <td>-215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.util.Hashtable)[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@7cd62f43]">loginTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:48</td>   <td>-1411</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@7cd62f43]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>-215</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.LoginTest@7cd62f43]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.portfoliosuite.PortFolioTest@598067a5]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
 </table>
