--- a/CoreFramework/test-output/old/Stock Suite/methods.html
+++ b/CoreFramework/test-output/old/Stock Suite/methods.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Stock Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@589838eb]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@589838eb]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="70b3e1">  <td>18/10/17 23:32:14</td>   <td>79</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddDelStockTest.addStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.AddDelStockTest@589838eb]">addStockTest</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>83</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@589838eb]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>177</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="9ad2d6">  <td>18/10/17 23:32:14</td>   <td>244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.buyOrSellStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">buyOrSellStockTest</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>314</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&gt;&gt;initTest</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="9ad2d6">  <td>18/10/17 23:32:14</td>   <td>315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.checkTransactionHistoryTest(java.util.Hashtable)[pri:2, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">checkTransactionHistoryTest</td> 
-  <td>main@422250493</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>18/10/17 23:32:14</td>   <td>319</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@7085bdee]">&lt;&lt;quit</td> 
-<td>&nbsp;</td>  <td>main@422250493</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@6500df86]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@6500df86]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="dafa95">  <td>19/05/08 13:24:49</td>   <td>62</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddDelStockTest.addStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.AddDelStockTest@6500df86]">addStockTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>72</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.AddDelStockTest@6500df86]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>174</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.init()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5700d6b1]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5700d6b1]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/05/08 13:24:49</td>   <td>224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.buyOrSellStockTest(java.util.Hashtable)[pri:1, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5700d6b1]">buyOrSellStockTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:49</td>   <td>234</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5700d6b1]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:50</td>   <td>316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.initTest()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5700d6b1]">&gt;&gt;initTest</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e98674">  <td>19/05/08 13:24:50</td>   <td>316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BuySellStockTest.checkTransactionHistoryTest(java.util.Hashtable)[pri:2, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5700d6b1]">checkTransactionHistoryTest</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="efea79">  <td>19/05/08 13:24:50</td>   <td>316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.quit()[pri:0, instance:com.selenium.testcases.stocksuite.BuySellStockTest@5700d6b1]">&lt;&lt;quit</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
 </table>
